Add twitch thinks

--- a/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
@@ -13,3 +13,13 @@
 {{ if .Site.Params.analytics.matomo }}
   {{ partial "_analytics/matomo.html" . }}
 {{ end }}
+
+<!-- Load the Twitch embed script -->
+<script src="https://player.twitch.tv/js/embed/v1.js"></script>
+
+<!-- Create a Twitch.Player object. This will render within the placeholder div -->
+<script type="text/javascript">
+  new Twitch.Player("twitch-embed", {
+    channel: "lomaurii"
+  });
+</script>
