--- a/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
@@ -10,7 +10,12 @@
       {{ end }}
     </ul>
     {{ partial "social_buttons_in_sidebar.html" . }}
-
+    <iframe
+      id="chat_embed"
+      src="https://www.twitch.tv/embed/lomaurii/chat?parent=www.blackrhinoo.com"
+      height="500"
+      width="350">
+    </iframe>
     <div class="copyright">
       <p class="credit">
         {{ with .Site.Params.copyright }}
