--- a/themes/minimal-shop-theme/layouts/partials/head.html
+++ b/themes/minimal-shop-theme/layouts/partials/head.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="{{ "css/font-awesome.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.carousel.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.theme.css" | absURL }}">
+<link href="{{ "css/splide.min.css" | absURL }}" rel="stylesheet">
+
 <!-- Theme stylesheet, if possible do not edit this stylesheet -->
 {{ with .Site.Params.style }}
   <link href="{{ printf "css/style.%s.css" . | absURL }}" rel="stylesheet" id="theme-stylesheet">
