--- a/themes/minimal-shop-theme/layouts/partials/head.html
+++ b/themes/minimal-shop-theme/layouts/partials/head.html
@@ -8,16 +8,9 @@
 <link rel="stylesheet" href="{{ "css/font-awesome.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.carousel.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.theme.css" | absURL }}">
-<link href="{{ "css/splide.min.css" | absURL }}" rel="stylesheet">
+<link rel="stylesheet" href="{{ "css/splide.min.css" | absURL }}">
+<link rel="stylesheet" href="{{ "css/style.violet.css" . | absURL }}" id="theme-stylesheet">
 
-<!-- Theme stylesheet, if possible do not edit this stylesheet -->
-{{ with .Site.Params.style }}
-  <link href="{{ printf "css/style.%s.css" . | absURL }}" rel="stylesheet" id="theme-stylesheet">
-{{ else }}
-  <link href="{{ "css/style.default.css" | absURL }}" rel="stylesheet" id="theme-stylesheet">
-{{ end }}
- <!-- Responsivity for older IE -->
-<!-- Just in case -->
   {{ `
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
