--- a/themes/minimal-shop-theme/layouts/partials/head.html
+++ b/themes/minimal-shop-theme/layouts/partials/head.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="{{ "css/owl.carousel.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.theme.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/splide.min.css" | absURL }}">
-<link rel="stylesheet" href="{{ "css/style.violet.css" . | absURL }}" id="theme-stylesheet">
+<link rel="stylesheet" href="{{ "css/style.violet.css" | absURL }}" id="theme-stylesheet">
 
   {{ `
     <!--[if lt IE 9]>
