--- a/themes/minimal-shop-theme/layouts/partials/social_buttons_in_contact.html
+++ b/themes/minimal-shop-theme/layouts/partials/social_buttons_in_contact.html
@@ -30,7 +30,7 @@
   </a>
   {{end}}
   {{ with .Site.Params.social.coffe }}
-  <a href="{{ . }}" target="_blank" data-animate-hover="pulse" class="external" title="WhatsApp">
+  <a href="{{ . }}" target="_blank" data-animate-hover="pulse" class="external" title="Paypal">
     <i class="fa fa-paypal"></i>
   </a>
   {{end}}
