--- a/themes/minimal-shop-theme/layouts/partials/social_buttons_in_sidebar.html
+++ b/themes/minimal-shop-theme/layouts/partials/social_buttons_in_sidebar.html
@@ -25,7 +25,7 @@
     </a>
     {{end}}
     {{ with .Site.Params.social.coffe }}
-    <a href="{{ . }}" target="_blank" data-animate-hover="pulse" class="external" title="WhatsApp">
+    <a href="{{ . }}" target="_blank" data-animate-hover="pulse" class="external" title="PayPal">
       <i class="fa fa-paypal"></i>
     </a>
     {{end}}  
