--- a/themes/minimal-shop-theme/layouts/partials/colections.html
+++ b/themes/minimal-shop-theme/layouts/partials/colections.html
@@ -3,13 +3,13 @@
     <div class="grid">
         <div class="row">
           {{ range .Data.Pages }}
-              <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-                  <div class="box-masonry">
+              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 masonry-item">
+                  <div class="box-masonry" style="text-align: center;">
                       {{ if and (isset .Params "image") .Params.image }}
                         {{ if eq .Params.showonlyimage true }}
-                        <a href="{{ .Permalink }}" title="" class="box-masonry-image with-hover-overlay">
+                        <a href="{{ .Params.link }}" title="" class="box-masonry-image with-hover-overlay">
                         {{ else }}
-                        <a href="{{ .Permalink }}" title="" class="box-masonry-image with-hover-overlay with-hover-icon">
+                        <a href="{{ .Params.link }}" title="" class="box-masonry-image with-hover-overlay with-hover-icon">
                         {{ end }}
                             <img src="{{.Params.image | absURL}}" alt="" class="img-responsive">
                         </a>
@@ -19,7 +19,7 @@
                       {{ else }}
                       <div class="box-masonry-text">
                       {{ end }}
-                          <h4><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
+                          <h4><a href="{{ .Params.link }}">{{ .Title }}</a></h4>
                           <div class="box-masonry-description">
                             <p>
                                 {{ if .Description }}
@@ -36,4 +36,3 @@
         </div>
     </div>
 </div>
-
