--- a/themes/minimal-shop-theme/static/css/style.violet.css
+++ b/themes/minimal-shop-theme/static/css/style.violet.css
@@ -324,6 +324,13 @@ SIDEBAR + RIGHT COLUMN
     z-index: 0;
     padding: 0 1.7em 0 0em;
 }
+.sidebar-content-img {
+  max-height: 40px;
+  max-width: 60px;
+  margin-bottom: 1em;
+  margin-left: 1em;
+}
+
 @media screen and (min-width: 992px) {
   .sidebar-content {
     padding-left: 0px;
@@ -899,10 +906,10 @@ a:active {
   opacity: 1;
 }
 .box-masonry:hover .box-masonry-image.with-hover-overlay:before {
-  opacity: 0.8;
+  opacity: 0.4;
 }
 .box-masonry:hover .box-masonry-image.with-hover-icon:after {
-  opacity: 0.7;
+  opacity: 0.4;
 }
 .box-masonry h2:last-child,
 .box-masonry p:last-child {
@@ -943,7 +950,7 @@ a:active {
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
   font-family: 'FontAwesome';
-  content: '\f105';
+  content: url('/img/favicon.png');
   text-align: center;
   font-size: 50px;
   color: #555555;
