--- a/themes/minimal-shop-theme/layouts/colections/list.html
+++ b/themes/minimal-shop-theme/layouts/colections/list.html
@@ -1,4 +1,4 @@
 {{ define "main" }}
 <!-- TODO Change Style for collections -->
-  {{ partial "colections.html" . }}
+  {{ partial "collections.html" . }}
 {{ end }}
