--- a/themes/minimal-shop-theme/layouts/partials/sidebar.html
+++ b/themes/minimal-shop-theme/layouts/partials/sidebar.html
@@ -1,27 +1,35 @@
-<div id="sidebar" class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
-  <div class="sidebar-content lg:hidden">
-      <a href="{{ .Site.BaseURL }}">
-        <img src="/img/br.png" alt="logo-black-rhinoo" class="sidebar-content-img" />
-      </a>
-    <!-- {{ range .Site.Params.sidebarAbout }}
-      <p class="sidebar-p">{{ . | safeHTML }}</p>
-    {{ end }} -->
-    <ul class="sidebar-menu">
-      {{ range .Site.Params.navlinks }}
-        {{ if .show }}
-          <li><a href="{{ absURL .url }}">{{ .name }}</a></li>
-        {{ end}}
-      {{ end }}
-    </ul>
-    {{ partial "social_buttons_in_sidebar.html" . }}    
-    
-    <!-- <div class="copyright">
-      <p class="credit">
-        {{ with .Site.Params.copyright }}
-          {{ . | safeHTML }} |
-        {{ end }}
-        {{ partial "attribution.html" . }}
-      </p>
-    </div> -->
+<!-- navigation -->
+<header class="sticky bg-white">
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div id="sidebar" class="">
+        <div class="sidebar-content lg:hidden">
+            <a href="{{ .Site.BaseURL }}">
+              <img src="/img/br-lt.png" alt="logo-black-rhinoo" class="sidebar-content-img" />
+            </a>
+          <!-- {{ range .Site.Params.sidebarAbout }}
+            <p class="sidebar-p">{{ . | safeHTML }}</p>
+          {{ end }} -->
+          <div class="collapse navbar-collapse text-center" id="">
+            <ul class="navbar-nav ml-auto">
+              {{ range .Site.Params.navlinks }}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ absURL .url }}">{{ .name }}</a>
+              </li>
+            {{ end }}
+            </ul>
+          {{ partial "social_buttons_in_sidebar.html" . }}
+          
+          <!-- <div class="copyright">
+            <p class="credit">
+              {{ with .Site.Params.copyright }}
+                {{ . | safeHTML }} |
+              {{ end }}
+              {{ partial "attribution.html" . }}
+            </p>
+          </div> -->
+        </div>
+      </div>
+    </nav>
   </div>
-</div>
+</header>
