--- a/themes/minimal-shop-theme/layouts/partials/mobile_nav_toggle.html
+++ b/themes/minimal-shop-theme/layouts/partials/mobile_nav_toggle.html
@@ -1,6 +1,15 @@
-<div class="small-navbar visible-xs">
-  <button type="button" data-toggle="offcanvas" class="btn btn-ghost pull-left"> 
-    <img src="/img/br.png" alt="logo-black-rhinoo" class="small-navbar-content-img" />
-  </button>
-  <h1 class="small-navbar-heading"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
-</div>
+<header class="sticky-top bg-white small-navbar visible-xs">
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light text-center-mobile">
+      {{ partial "social_buttons_in_sidebar.html" . }}
+      <ul class="navbar-nav">
+        {{ range .Site.Params.navlinks }}
+        <li class="nav-item">
+            <a class="nav-link" href="{{ absURL .url }}">{{ .name }}</a>
+        </li>
+        {{ end }}
+      </ul>
+    </nav>
+  </div>
+</header>
+
