--- a/themes/minimal-shop-theme/static/css/custom.css
+++ b/themes/minimal-shop-theme/static/css/custom.css
@@ -1,3 +1,11 @@
+
+.main-bg {
+  background-image: url("/img/background.avif");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /* your styles go here */
 .splide__slide img {
     width: 100%;
