--- a/themes/minimal-shop-theme/layouts/_default/baseof.html
+++ b/themes/minimal-shop-theme/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}">
 <head>{{ partial "head.html" . }}</head>
 <body>
-  <div id="all" class="main-bg">
+  <div id="all">
       <div class="container-fluid">
           <div class="row row-offcanvas row-offcanvas-left">
               {{ partial "header.html" . }}
