--- a/themes/minimal-shop-theme/layouts/partials/collections.html
+++ b/themes/minimal-shop-theme/layouts/partials/collections.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-12 col-md-12 content-column">
+<div class="col-xs-12 col-sm-12 col-md-12 main-bg">
     {{ partial "mobile_nav_toggle.html" . }}
     <div class="grid">
         <div class="row">
