--- a/themes/minimal-shop-theme/layouts/partials/header.html
+++ b/themes/minimal-shop-theme/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="sticky-top main-bg-color">
+<header class="sticky-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}">
