--- a/themes/minimal-shop-theme/layouts/_default/single.html
+++ b/themes/minimal-shop-theme/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-<div class="col-xs-12 col-sm-12 col-md-12 main-bg-color">
+<div class="col-xs-12 col-sm-12 col-md-12 content-column">
   {{ partial "mobile_nav_toggle.html" . }}
   <div class="row">
-    <div class="col-lg-8">
+    <div class="col-lg-12">
       <div class="content-column-content">
          <h4>{{ .Title }}</h4>
          {{ .Content }}
