--- a/themes/minimal-shop-theme/layouts/contact/list.html
+++ b/themes/minimal-shop-theme/layouts/contact/list.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-<div class="col-xs-12 col-sm-12 col-md-12 main-bg-color">
+<div class="col-xs-12 col-sm-12 col-md-12 content-column">
   {{ partial "mobile_nav_toggle.html" . }}
   <div class="row">
-    <div class="col-lg-8">
+    <div class="col-lg-12">
       <div class="content-column-content">
          <h1>{{ .Title }}</h1>
          {{ .Content }}
@@ -10,7 +10,7 @@
          {{ partial "social_buttons_in_contact.html" . }}
          {{ with .Site.Params.email }}
          <h4>¿Tienes alguna pregunta más?</h4>
-         <form id="contact-form" class="contact-form form" method="post" action="https://formspree.io/f/xbjvokyz">
+         <form id="contact-form" class="contact-form form col-lg-6" method="post" action="https://formspree.io/f/xbjvokyz">
            <div class="controls">
              <div class="form-group">
                <label for="name">Nombre *</label>
