--- a/themes/minimal-shop-theme/static/css/style.violet.css
+++ b/themes/minimal-shop-theme/static/css/style.violet.css
@@ -24,12 +24,12 @@ section {
   padding-bottom: 90px;
 }
 section.background-gray-lighter {
-  background: #fff;
+  background: #fdf8f5;
 }
 section.background-gray-lightest {
-  background: #fff;
-  border-top: solid 1px #fff;
-  border-bottom: solid 1px #fff;
+  background: #fdf8f5;
+  border-top: solid 1px #fdf8f5;
+  border-bottom: solid 1px #fdf8f5;
 }
 section.background-secondary {
   background: #566682;
@@ -37,7 +37,7 @@ section.background-secondary {
   border-bottom: solid 1px #2d3645;
 }
 .section-inverse {
-  color: #fff;
+  color: #fdf8f5;
 }
 .section-inverse h1,
 .section-inverse h2,
@@ -45,10 +45,10 @@ section.background-secondary {
 .section-inverse h4,
 .section-inverse h5,
 .section-inverse h6 {
-  color: #fff;
+  color: #fdf8f5;
 }
 .section-inverse .heading:after {
-  background: #fff;
+  background: #fdf8f5;
 }
 .italic {
   font-style: italic;
@@ -123,10 +123,10 @@ button i.fa {
   cursor: pointer !important;
 }
 .required {
-  color: #9055a2;
+  color: #49675d;
 }
 .accent {
-  color: #9055a2;
+  color: #49675d;
 }
 .text-uppercase {
   text-transform: uppercase;
@@ -136,16 +136,16 @@ button i.fa {
   list-style: none;
 }
 .btn-ghost {
-  color: #9055a2;
+  color: #49675d;
   background-color: transparent;
-  border-color: #9055a2;
+  border-color: #49675d;
 }
 .btn-ghost:hover,
 .btn-ghost:focus,
 .btn-ghost:active,
 .btn-ghost.active,
 .open .dropdown-toggle.btn-ghost {
-  color: #9055a2;
+  color: #49675d;
   background-color: rgba(0, 0, 0, 0);
   border-color: #6c407a;
 }
@@ -170,20 +170,20 @@ fieldset[disabled] .btn-ghost:active,
 .btn-ghost[disabled].active,
 fieldset[disabled] .btn-ghost.active {
   background-color: transparent;
-  border-color: #9055a2;
+  border-color: #49675d;
 }
 .btn-ghost .badge {
   color: transparent;
-  background-color: #9055a2;
+  background-color: #49675d;
 }
 .btn-ghost:hover,
 .btn-ghost:focus,
 .btn-ghost:active,
 .btn-ghost.active,
 .open .dropdown-toggle.btn-ghost {
-  color: #fff;
-  background-color: #9055a2;
-  border-color: #9055a2;
+  color: #fdf8f5;
+  background-color: #49675d;
+  border-color: #49675d;
 }
 .btn-ghost-black {
   color: #000000;
@@ -231,21 +231,21 @@ fieldset[disabled] .btn-ghost-black.active {
 .btn-ghost-black:active,
 .btn-ghost-black.active,
 .open .dropdown-toggle.btn-ghost-black {
-  color: #fff;
+  color: #fdf8f5;
   background-color: #000;
   border-color: #000;
 }
 .btn-white {
-  color: #ffffff;
+  color: #fdf8f5;
   background-color: transparent;
-  border-color: #ffffff;
+  border-color: #fdf8f5;
 }
 .btn-white:hover,
 .btn-white:focus,
 .btn-white:active,
 .btn-white.active,
 .open .dropdown-toggle.btn-white {
-  color: #ffffff;
+  color: #fdf8f5;
   background-color: rgba(0, 0, 0, 0);
   border-color: #e0e0e0;
 }
@@ -270,20 +270,20 @@ fieldset[disabled] .btn-white:active,
 .btn-white[disabled].active,
 fieldset[disabled] .btn-white.active {
   background-color: transparent;
-  border-color: #ffffff;
+  border-color: #fdf8f5;
 }
 .btn-white .badge {
   color: transparent;
-  background-color: #ffffff;
+  background-color: #fdf8f5;
 }
 .btn-white:hover,
 .btn-white:focus,
 .btn-white:active,
 .btn-white.active,
 .open .dropdown-toggle.btn-white {
-  color: #ffffff;
-  background-color: #fff;
-  border-color: #fff;
+  color: #fdf8f5;
+  background-color: #fdf8f5;
+  border-color: #fdf8f5;
 }
 .icon {
   display: inline-block;
@@ -291,8 +291,8 @@ fieldset[disabled] .btn-white.active {
   height: 60px;
   line-height: 60px;
   border-radius: 30px;
-  border: solid 1px #9055a2;
-  color: #9055a2;
+  border: solid 1px #49675d;
+  color: #49675d;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
@@ -344,7 +344,7 @@ SIDEBAR + RIGHT COLUMN
   transition: all 0.2s ease-out;
 }
 .sidebar-heading a:hover {
-  border-bottom: dotted 1px #9055a2;
+  border-bottom: dotted 1px #49675d;
   color: #000;
   text-decoration: none;
 }
@@ -370,24 +370,24 @@ SIDEBAR + RIGHT COLUMN
   color: #999999;
 }
 .sidebar-menu li.active a {
-  color: #9055a2;
+  color: #49675d;
   font-weight: bold;
 }
 .sidebar-menu li.active:before {
-  color: #9055a2;
+  color: #49675d;
 }
 .sidebar-menu li:hover a {
   text-decoration: none;
-  color: #9055a2;
+  color: #49675d;
 }
 .sidebar-menu li:hover:before {
-  color: #9055a2;
+  color: #49675d;
 }
 .content-column {
   padding-top: 40px;
 }
 .content-column.white-background {
-  background: #fff;
+  background: #fdf8f5;
   min-height: 100vh;
 }
 .grid {
@@ -442,7 +442,7 @@ SIDEBAR + RIGHT COLUMN
   transition: all 0.2s ease-out;
 }
 .small-navbar-heading a:hover {
-  border-bottom: dotted 1px #9055a2;
+  border-bottom: dotted 1px #49675d;
   color: #000;
   text-decoration: none;
 }
@@ -451,7 +451,7 @@ SIDEBAR + RIGHT COLUMN
 OFF-CANVAS SIDEBAR BEHAVIOUR
 =====================
 */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1200px) {
   .row-offcanvas {
     position: relative;
     -webkit-transition: all 0.25s ease-out;
@@ -517,7 +517,7 @@ SERVICES / INTEGRATIONS
   width: 100px;
   height: 1px;
   margin: 20px auto 20px;
-  background: #9055a2;
+  background: #49675d;
 }
 .services p {
   font-size: 14px;
@@ -575,7 +575,7 @@ p.social {
 }
 p.social a {
   margin: 0 10px 10px 0;
-  color: #fff;
+  color: #fdf8f5;
   display: inline-block;
   width: 40px;
   height: 40px;
@@ -599,8 +599,8 @@ p.social a {
              */
 }
 p.social a:hover {
-  color: #9055a2;
-  border-color: #9055a2;
+  color: #49675d;
+  border-color: #49675d;
 }
 p.social a i {
   vertical-align: bottom;
@@ -688,7 +688,7 @@ MAIN PORTFOLIO SLIDER
 }
 #main-slider .owl-controls .owl-page.active span,
 #main-slider .owl-controls.clickable .owl-page:hover span {
-  background: #9055a2;
+  background: #49675d;
 }
 /*
 =====================
@@ -753,7 +753,7 @@ ABOUT
 }
 .progress-bar-skill5 {
   background-color: #a9a8a8;
-  background-color: #9055a2;
+  background-color: #49675d;
 }
 .progress-striped .progress-bar-skill5 {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -785,7 +785,7 @@ EKKO LIGHTBOX
   width: 49%;
   height: 100%;
   font-size: 30px;
-  color: #fff;
+  color: #fdf8f5;
   opacity: 0;
   text-decoration: none !important;
   -webkit-transition: opacity 0.5s;
@@ -802,7 +802,7 @@ a:focus,
 a:active {
   text-decoration: none;
   opacity: 1;
-  color: #fff;
+  color: #fdf8f5;
 }
 .ekko-lightbox .glyphicon-chevron-left {
   left: 0;
@@ -824,7 +824,7 @@ a:active {
   margin-left: -15px;
 }
 .box-masonry {
-  background: #fff;
+  background: #fdf8f5;
   margin-bottom: 30px;
   position: relative;
   /* box-shadow: 0 0 5px #ccc; */
@@ -846,7 +846,7 @@ a:active {
   border-bottom: solid 1px transparent;
 }
 .box-masonry h4 a:hover {
-  border-bottom: dotted 1px #9055a2;
+  border-bottom: dotted 1px #49675d;
   color: #000;
   text-decoration: none;
 }
@@ -920,7 +920,7 @@ a:active {
   display: block;
   position: absolute;
   content: " ";
-  background: #fff;
+  background: #fdf8f5;
   opacity: 0;
   width: 100%;
   height: 100%;
@@ -992,7 +992,7 @@ a:active {
   padding: 20px;
   border: dotted 1px #999999;
   background: #555555;
-  color: #fff;
+  color: #fdf8f5;
 }
 .box-simple.box-dark .icon {
   color: #f7f7f7;
@@ -1000,13 +1000,13 @@ a:active {
   font-size: 70px;
 }
 .box-simple.box-dark h3 {
-  color: #fff;
+  color: #fdf8f5;
 }
 .box-simple.box-dark h3 a {
-  color: #fff;
+  color: #fdf8f5;
 }
 .box-simple.box-dark p {
-  color: #fff;
+  color: #fdf8f5;
 }
 .box-image {
   position: relative;
@@ -1022,7 +1022,7 @@ a:active {
   height: 100%;
   opacity: 0;
   filter: alpha(opacity=0);
-  background: #9055a2;
+  background: #49675d;
 }
 .box-image .name {
   position: absolute;
@@ -1035,17 +1035,17 @@ a:active {
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
-  color: #fff;
+  color: #fdf8f5;
   padding: 0 20px;
 }
 .box-image .name h3 {
-  color: #fff;
+  color: #fdf8f5;
   text-transform: uppercase;
   font-size: 24px;
   letter-spacing: 0.08em;
 }
 .box-image .name h3 a {
-  color: #fff;
+  color: #fdf8f5;
   text-decoration: none;
 }
 .box-image .text {
@@ -1059,7 +1059,7 @@ a:active {
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
-  color: #fff;
+  color: #fdf8f5;
   padding: 0 20px;
 }
 .box-image:hover .bg {
@@ -1080,7 +1080,7 @@ a:active {
 }
 .box-image-text {
   position: relative;
-  background: #fff;
+  background: #fdf8f5;
   overflow: hidden;
   text-align: center;
   margin: 15px 0;
@@ -1097,7 +1097,7 @@ a:active {
   height: 100%;
   opacity: 0;
   filter: alpha(opacity=0);
-  background: #fff;
+  background: #fdf8f5;
 }
 .box-image-text .top .logo {
   width: 100%;
@@ -1119,27 +1119,27 @@ a:active {
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
-  color: #fff;
+  color: #fdf8f5;
   padding: 0 20px;
 }
 .box-image-text .top .name h3 {
-  color: #fff;
+  color: #fdf8f5;
   text-transform: uppercase;
   font-size: 24px;
   letter-spacing: 0.08em;
 }
 .box-image-text .top .name h3 a {
-  color: #fff;
+  color: #fdf8f5;
   text-decoration: none;
 }
 .box-image-text .top .name h4 {
-  color: #fff;
+  color: #fdf8f5;
   text-transform: uppercase;
   font-size: 24px;
   letter-spacing: 0.08em;
 }
 .box-image-text .top .name h4 a {
-  color: #fff;
+  color: #fdf8f5;
   text-decoration: none;
 }
 .box-image-text .top .text {
@@ -1153,7 +1153,7 @@ a:active {
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
-  color: #fff;
+  color: #fdf8f5;
   padding: 0 20px;
 }
 .box-image-text .content {
@@ -1211,7 +1211,7 @@ STYLE SWITCHER FOR DEMO
   position: fixed;
   bottom: 240px;
   left: 0;
-  background: #fff;
+  background: #fdf8f5;
   border: solid 1px #cdcdcd;
   z-index: 2000;
 }
@@ -1245,7 +1245,7 @@ STYLE SWITCHER FOR DEMO
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #cdcdcd;
-  border-color: #9055a2;
+  border-color: #49675d;
 }
 .nav-tabs {
   border-bottom: 1px solid #dddddd;
@@ -1270,8 +1270,8 @@ STYLE SWITCHER FOR DEMO
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  color: #ffffff;
-  background-color: #9055a2;
+  color: #fdf8f5;
+  background-color: #49675d;
 }
 .nav-tabs-justified > li > a {
   border-radius: 0;
@@ -1390,7 +1390,7 @@ STYLE SWITCHER FOR DEMO
   padding-bottom: 10px;
   line-height: 24px;
 }
-@media (max-width: 767px) {
+@media (max-width: 1200px) {
   .navbar-nav .open .dropdown-menu > li > a,
   .navbar-nav .open .dropdown-menu .dropdown-header {
     padding: 5px 15px 5px 25px;
@@ -1429,7 +1429,7 @@ STYLE SWITCHER FOR DEMO
   margin-top: 21px;
   margin-bottom: 21px;
 }
-@media (max-width: 767px) {
+@media (max-width: 1200px) {
   .navbar-form .form-group {
     margin-bottom: 5px;
   }
@@ -1461,7 +1461,7 @@ STYLE SWITCHER FOR DEMO
   }
 }
 .navbar-default {
-  background-color: #ffffff;
+  background-color: #fdf8f5;
   border-bottom-color: transparent;
 }
 .navbar-default .navbar-brand {
@@ -1480,13 +1480,13 @@ STYLE SWITCHER FOR DEMO
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #9055a2;
+  color: #49675d;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #9055a2;
+  color: #49675d;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .disabled > a,
@@ -1512,21 +1512,21 @@ STYLE SWITCHER FOR DEMO
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
   background-color: transparent;
-  color: #9055a2;
+  color: #49675d;
 }
-@media (max-width: 767px) {
+@media (max-width: 1200px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #453f69;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #9055a2;
+    color: #49675d;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #9055a2;
+    color: #49675d;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
@@ -1540,13 +1540,13 @@ STYLE SWITCHER FOR DEMO
   color: #453f69;
 }
 .navbar-default .navbar-link:hover {
-  color: #9055a2;
+  color: #49675d;
 }
 /* dropdowns */
 .dropdown-menu {
   z-index: 1000;
   font-size: 14px;
-  background-color: #ffffff;
+  background-color: #fdf8f5;
   border: 1px solid #cccccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0;
@@ -1569,12 +1569,12 @@ STYLE SWITCHER FOR DEMO
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-  color: #ffffff;
-  background-color: #9055a2;
+  color: #fdf8f5;
+  background-color: #49675d;
 }
 /* modal */
 .modal-content {
-  background-color: #ffffff;
+  background-color: #fdf8f5;
   border: 1px solid #999999;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0;
@@ -1585,10 +1585,10 @@ body {
   font-size: 16px;
   line-height: 1.55;
   color: #000000;
-  background-color: #fff;
+  background-color: #fdf8f5;
 }
 a {
-  color: #9055a2;
+  color: #49675d;
   text-decoration: none;
 }
 a:hover,
@@ -1647,7 +1647,7 @@ hr {
   color: #999999;
 }
 .breadcrumb a {
-  color: #9055a2;
+  color: #49675d;
 }
 @media (max-width: 991px) {
   .breadcrumb {
@@ -1665,16 +1665,16 @@ hr {
   border-radius: 0;
 }
 .btn-primary {
-  color: #ffffff;
-  background-color: #9055a2;
-  border-color: #9055a2;
+  color: #fdf8f5;
+  background-color: #49675d;
+  border-color: #49675d;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #ffffff;
+  color: #fdf8f5;
   background-color: #784787;
   border-color: #6c407a;
 }
@@ -1698,12 +1698,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #9055a2;
-  border-color: #9055a2;
+  background-color: #49675d;
+  border-color: #49675d;
 }
 .btn-primary .badge {
-  color: #9055a2;
-  background-color: #ffffff;
+  color: #49675d;
+  background-color: #fdf8f5;
 }
 .btn-transparent {
   color: #555555;
@@ -1750,8 +1750,8 @@ fieldset[disabled] .btn-transparent.active {
 .btn-transparent:focus,
 .btn-transparent:active,
 .btn-transparent.active {
-  background: #ffffff;
-  color: #9055a2;
+  background: #fdf8f5;
+  color: #49675d;
 }
 .btn-lg {
   padding: 10px 16px;
@@ -1797,7 +1797,7 @@ label {
   font-size: 16px;
   line-height: 1.55;
   color: #555555;
-  background-color: #ffffff;
+  background-color: #fdf8f5;
   background-image: none;
   border: 1px solid #cccccc;
   border-radius: 0;
@@ -1815,7 +1815,7 @@ label {
   color: #999999;
 }
 .form-control:focus {
-  border-color: #9055a2;
+  border-color: #49675d;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(144, 85, 162, 0.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(144, 85, 162, 0.6);
@@ -1839,22 +1839,22 @@ label {
 }
 .pager li > a,
 .pager li > span {
-  background-color: #ffffff;
-  border: 1px solid #9055a2;
+  background-color: #fdf8f5;
+  border: 1px solid #49675d;
   border-radius: 0;
 }
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  color: #fff;
-  background-color: #9055a2;
+  color: #fdf8f5;
+  background-color: #49675d;
 }
 .pager .disabled > a,
 .pager .disabled > a:hover,
 .pager .disabled > a:focus,
 .pager .disabled > span {
   color: #999999;
-  background-color: #ffffff;
+  background-color: #fdf8f5;
   border-color: #ddd;
 }
 /* pagination */
@@ -1868,8 +1868,8 @@ label {
   padding: 6px 12px;
   line-height: 1.55;
   text-decoration: none;
-  color: #9055a2;
-  background-color: #ffffff;
+  color: #49675d;
+  background-color: #fdf8f5;
   border: 1px solid #dddddd;
 }
 .pagination > li:first-child > a,
@@ -1887,7 +1887,7 @@ label {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #9055a2;
+  color: #49675d;
   background-color: #d1b7d9;
   border-color: #dddddd;
 }
@@ -1898,9 +1898,9 @@ label {
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
   z-index: 2;
-  color: #ffffff;
-  background-color: #9055a2;
-  border-color: #9055a2;
+  color: #fdf8f5;
+  background-color: #49675d;
+  border-color: #49675d;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -1909,11 +1909,11 @@ label {
 .pagination > .disabled > a:hover,
 .pagination > .disabled > a:focus {
   color: #999999;
-  background-color: #ffffff;
+  background-color: #fdf8f5;
   border-color: #dddddd;
 }
 /* responsive utilities */
-@media (max-width: 767px) {
+@media (max-width: 1200px) {
   .text-center-xs {
     text-align: center !important;
   }
@@ -2010,14 +2010,14 @@ p {
   font-style: italic;
 }
 .text-primary {
-  color: #9055a2;
+  color: #49675d;
 }
 a.text-primary:hover {
   color: #724381;
 }
 .bg-primary {
-  color: #fff;
-  background-color: #9055a2;
+  color: #fdf8f5;
+  background-color: #49675d;
 }
 a.bg-primary:hover {
   background-color: #724381;
@@ -2030,7 +2030,7 @@ blockquote {
   padding: 12px 24px;
   margin: 0 0 24px;
   font-size: 16px;
-  border-left: 5px solid #9055a2;
+  border-left: 5px solid #49675d;
 }
 blockquote footer,
 blockquote small,
@@ -2047,7 +2047,7 @@ blockquote .small:before {
 }
 .blockquote-reverse,
 blockquote.pull-right {
-  border-right: 5px solid #9055a2;
+  border-right: 5px solid #49675d;
 }
 address {
   margin-bottom: 24px;
@@ -2055,7 +2055,7 @@ address {
 }
 .panel {
   margin-bottom: 24px;
-  background-color: #ffffff;
+  background-color: #fdf8f5;
   border: 1px solid transparent;
   border-radius: 0;
   -webkit-box-shadow: 0 0 0;
@@ -2066,7 +2066,7 @@ address {
 }
 .panel-default > .panel-heading {
   color: #333333;
-  background-color: #ffffff;
+  background-color: #fdf8f5;
   border-color: #666666;
 }
 .panel-default > .panel-heading + .panel-collapse .panel-body {
@@ -2076,36 +2076,36 @@ address {
   border-bottom-color: #666666;
 }
 .panel-primary {
-  border-color: #9055a2;
+  border-color: #49675d;
 }
 .panel-primary > .panel-heading {
-  color: #ffffff;
-  background-color: #9055a2;
-  border-color: #9055a2;
+  color: #fdf8f5;
+  background-color: #49675d;
+  border-color: #49675d;
 }
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #9055a2;
+  border-top-color: #49675d;
 }
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #9055a2;
+  border-bottom-color: #49675d;
 }
 .panel-primary .panel-title {
   font-weight: 300;
 }
 .panel-primary .panel-title a:hover {
-  color: #fff;
+  color: #fdf8f5;
   text-decoration: none;
 }
 a.badge:hover,
 a.badge:focus {
-  color: #ffffff;
+  color: #fdf8f5;
   text-decoration: none;
   cursor: pointer;
 }
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #9055a2;
-  background-color: #ffffff;
+  color: #49675d;
+  background-color: #fdf8f5;
 }
 .nav-pills > li > a > .badge {
   margin-left: 3px;
